--- a/01-ec2-r53.yaml
+++ b/01-ec2-r53.yaml
@@ -8,10 +8,10 @@
     zone_id: "Z00716421P5ZXLU5W7GIT"
     domain_name: "born96.fun"
     instances: 
-    - mongodb
-    # - redis
-    # - mysql
-    # - rabbitmq
+    # - mongodb
+    - redis
+    - mysql
+    - rabbitmq
 
   
   tasks:
